--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "joi": "^17.13.1",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "morgan": "^1.10.0"
   }
 }
