--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "joi-password-complexity": "^5.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0"
