--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.13.1",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
